# bitol-skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  REFERENCES.md  SKILL_PLAYBOOK.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: bump-skill-versions.yml  ci.yml  drift.yml
docs/tutorials/: README.md  odcs-python.md  odcs-yaml.md  odps-yaml.md
docs/tutorials/jaffle-shop/: setup_jaffle_shop.sql
docs/tutorials/jaffle-shop/contracts/: customers.odcs.yaml  jaffle-shop-raw.odcs.yaml  jaffle_shop.odps.yaml  orders.odcs.yaml
docs/tutorials/jaffle-shop/scripts/: generate_contract.py
docs/tutorials/jaffle-shop/seeds/: raw_customers.csv  raw_orders.csv  raw_payments.csv
scripts/: check_releases.py  sync_specs.py  validate_skill.py
skills/odcs-python/: SKILL.md  sources.toml
skills/odcs-python/.claude-plugin/: plugin.json
skills/odcs-python/references/python/: model.py
skills/odcs-yaml/: SKILL.md  sources.toml
skills/odcs-yaml/.claude-plugin/: plugin.json
skills/odcs-yaml/references/: CHANGELOG.md
skills/odcs-yaml/references/examples/: full-example.odcs.yaml  kafka-schemaregistry.odcs.yaml  table-column.odcs.yaml
skills/odcs-yaml/references/schemas/: odcs-json-schema-v3.0.0.json  (+1 more)
skills/odcs-yaml/scripts/: validate_contract.py
skills/odps-yaml/: SKILL.md  sources.toml
skills/odps-yaml/.claude-plugin/: plugin.json
skills/odps-yaml/references/: CHANGELOG.md
tests/: test_check_releases.py  test_examples_parse.py  test_tutorial_contracts.py  test_validate_contract.py  test_validate_skill.py
(+13 files in other folders)
