[project]
name = "bitol-skills"
version = "0.0.0"
description = "Agent Skills for the Bitol data standards (ODCS, ODPS)."
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[dependency-groups]
dev = [
    "pyyaml>=6.0",
    "pytest>=8.0",
    "jsonschema>=4.0",
    # lets the tests exercise the odcs-yaml skill's pydantic validation path
    "open-data-contract-standard>=3.0.1",
]

[tool.pytest.ini_options]
# Only collect our own tests; do not auto-discover vendored test files
# inside skills/*/references/.
testpaths = ["tests"]
